<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:id="@+id/pop_container"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:focusable="true"
        android:background="@drawable/pop_item"
        app:layout_paddingTopPercent="1%h"
        app:layout_paddingBottomPercent="1%h"
        android:id="@+id/tv_update"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/update"
        android:textColor="@color/blue"/>
    <TextView
        android:focusable="true"
        android:background="@drawable/pop_item"
        app:layout_paddingTopPercent="1%h"
        app:layout_paddingBottomPercent="1%h"
        android:id="@+id/tv_recovery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/recovery"
        android:textColor="@color/blue"/>
    <TextView
        android:focusable="true"
        android:background="@drawable/pop_item"
        app:layout_paddingTopPercent="1%h"
        app:layout_paddingBottomPercent="1%h"
        android:id="@+id/tv_delete_device"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/delete_device"
        android:textColor="@color/blue"/>
    <TextView
        android:focusable="true"
        android:background="@drawable/pop_item"
        app:layout_paddingTopPercent="1%h"
        app:layout_paddingBottomPercent="1%h"
        android:visibility="gone"
        android:id="@+id/tv_delete_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/delete_group"
        android:textColor="@color/blue"/>
    <TextView
        android:focusable="true"
        android:background="@drawable/pop_item"
        app:layout_paddingTopPercent="1%h"
        app:layout_paddingBottomPercent="1%h"
        android:id="@+id/tv_change_device_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/change_device_name"
        android:textColor="@color/blue"/>
    <TextView
        android:focusable="true"
        android:background="@drawable/pop_item"
        app:layout_paddingTopPercent="1%h"
        app:layout_paddingBottomPercent="1%h"
        android:visibility="gone"
        android:id="@+id/tv_change_group_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/change_group_name"
        android:textColor="@color/blue"/>
</com.zhy.android.percent.support.PercentLinearLayout>