<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/top_bar"/>
    <ScrollView
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:background="@color/transparent"
                android:id="@+id/clock_image"
                android:layout_centerHorizontal="true"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/alarm_big"/>
            <TextView
                android:id="@+id/label_invoke"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/clock_image"
                android:text="@string/label_time"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tv_time"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/label_invoke"
                android:text="00 :   00"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/label_freq"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tv_time"
                android:text="@string/label_freq"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <RadioGroup
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/rg_freq"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/label_freq"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <com.linkus.superlamp.widget.BorderRadioButton
                    android:gravity="center"
                    android:text="@string/once"
                    android:button="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/selector_rg_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.linkus.superlamp.widget.BorderRadioButton
                    android:layout_marginLeft="8dp"
                    android:text="@string/per_time"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/selector_rg_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.linkus.superlamp.widget.BorderRadioButton
                    android:layout_marginLeft="8dp"
                    android:text="@string/per_hour"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/selector_rg_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.linkus.superlamp.widget.BorderRadioButton
                    android:layout_marginLeft="8dp"
                    android:text="@string/per_day"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/selector_rg_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <TextView
                android:id="@+id/label_invoke_action"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/rg_freq"
                android:text="@string/label_action"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <RadioGroup
                android:orientation="horizontal"
                android:id="@+id/rg_action"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/label_invoke_action"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <com.linkus.superlamp.widget.BorderRadioButton
                    android:gravity="center"
                    android:text="@string/open"
                    android:button="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/selector_rg_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.linkus.superlamp.widget.BorderRadioButton
                    android:layout_marginLeft="8dp"
                    android:text="@string/close"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/selector_rg_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>