<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/srl_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.scwang.smartrefresh.layout.header.ClassicsHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:gravity="center_horizontal"
                android:background="#efeff4"
                android:orientation="vertical"
                android:id="@+id/no_devices"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <View
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <ImageView
                        android:layout_marginRight="20dp"
                        android:src="@drawable/cube_line"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"/>
                </LinearLayout>
                <TextView
                    android:layout_marginTop="-25dp"
                    android:paddingLeft="15dp"
                    android:textColor="#4d5d7b"
                    android:textSize="16sp"
                    android:gravity="left"
                    android:text="@string/no_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingLeft="15dp"
                    android:textColor="#4d5d7b"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/add_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4" />
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="15dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="#4d5d7b"
                    android:text="@string/company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_link"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/website"
                    android:linksClickable="true"
                    android:textColorLink="#a9c6ec"
                    android:autoLink="web"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</com.scwang.smartrefresh.layout.SmartRefreshLayout>